@@ -56,9 +56,9 @@
     #[@test]
     public function settingAccessors() {
       $options= new RuntimeOptions();
-      $this->assertNull($options->getSetting('include_path'));
-      $options->withSetting('include_path', array('/usr/local/php'));
-      $this->assertEquals(array('/usr/local/php'), $options->getSetting('include_path'));
+      $this->assertNull($options->getSetting('memory_limit'));
+      $options->withSetting('memory_limit', array('128M'));
+      $this->assertEquals(array('128M'), $options->getSetting('memory_limit'));
     }
 
     /**
@@ -68,9 +68,9 @@
     #[@test]
     public function settingAccessorsStringOverload() {
       $options= new RuntimeOptions();
-      $this->assertNull($options->getSetting('include_path'));
-      $options->withSetting('include_path', '/usr/local/php');
-      $this->assertEquals(array('/usr/local/php'), $options->getSetting('include_path'));
+      $this->assertNull($options->getSetting('memory_limit'));
+      $options->withSetting('memory_limit', '128M');
+      $this->assertEquals(array('128M'), $options->getSetting('memory_limit'));
     }
 
     /**
@@ -122,6 +122,39 @@
       $options= new RuntimeOptions();
       $this->assertTrue($options === $options->withSetting('enable_dl', 0));
     }
+
+    /**
+     * Test getClassPath() method
+     *
+     */
+    #[@test]
+    public function getClassPath() {
+      $options= new RuntimeOptions();
+      $this->assertEquals(array(), $options->getClassPath());
+    }
+
+    /**
+     * Test withClassPath() method
+     *
+     */
+    #[@test]
+    public function withClassPath() {
+      $options= new RuntimeOptions();
+      $options->withClassPath(array('/opt/xp/lib/mysql-1.0.0.xar'));
+      $this->assertEquals(array('/opt/xp/lib/mysql-1.0.0.xar'), $options->getClassPath());
+    }
+
+    /**
+     * Test withClassPath() method
+     *
+     */
+    #[@test]
+    public function withClassPathOverload() {
+      $options= new RuntimeOptions();
+      $options->withClassPath('/opt/xp/lib/mysql-1.0.0.xar');
+      $this->assertEquals(array('/opt/xp/lib/mysql-1.0.0.xar'), $options->getClassPath());
+    }
+
     /**
      * Test asArguments() method
      *
@@ -195,6 +228,17 @@
         array('-q', '-n', '-denable_dl=1', '-dextension=php_xsl.dll', '-dextension=php_sybase_ct.dll'), 
         $options->asArguments()
       );
+    }
+
+    /**
+     * Test asArguments() method
+     *
+     */
+    #[@test]
+    public function classPathDoesntAppearInArguments() {
+      $options= new RuntimeOptions(); 
+      $options->withClassPath('/opt/xp/lib/mysql-1.0.0.xar');
+      $this->assertEquals(array(), $options->asArguments());
     }
   }
 ?>
